# gw2-addon-manager

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  packaging.spec  pyproject.toml  ruff.toml
.github/workflows/: bump_version.yaml  ci.yaml  create_tag.yaml  environment.yaml  release.yaml
src/: api.py  config.py  gui.py  main.py
src/configs/: addons.yaml  logging.yaml  logging_config.yaml  settings.yaml
src/parsers/: __init__.py  addons.py  logging_config.py  settings.py
tests/: conftest.py  helpers.py
tests/testcases/parsers/: test_addons.py  test_logging_config.py  test_settings.py
