[project]
name = "gw2-addon-manager"
version = "0.0.5"
description = "A simple tool to manage addons for Guild Wars 2."

requires-python = ">=3.11"

readme = "README.md"
dependencies = [
    "requests>=2.32.4",
    "ruamel-yaml>=0.18.14",
    "ttkwidgets>=0.13.0",
    "types-requests>=2.32.4.20250611",
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
show_error_codes = true
disable_error_code = [
	"attr-defined",
	"assignment",
	"index",
	"misc",
	"union-attr",
	"var-annotated",
]
