[build-system]
requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning>=2.0,<3", ]
build-backend = "setuptools.build_meta"

[project]
name = "gw2-addon-manager"
description = "A simple tool to manage addons for Guild Wars 2."
dynamic = ["version"]

requires-python = ">=3.11"

readme = "README.md"
dependencies = [
    "requests>=2.32.4",
    "ruamel-yaml>=0.18.14",
    "ttkwidgets>=0.13.0",
]

authors = [
	{name = "Jared Hinze", email = "Jared.L.Hinze@gmail.com"}
]
maintainers = [
	{name = "Jared Hinze", email = "Jared.L.Hinze@gmail.com"}
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]

keywords = ["guild wars 2", "gw2"]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.1",
    "types-requests>=2.32.4.20250611",
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
show_error_codes = true
disable_error_code = [
	"attr-defined",
	"assignment",
	"index",
	"misc",
	"union-attr",
	"var-annotated",
]

[tool.setuptools-git-versioning]
enabled = true
