[project]
name = "gw2-addon-manager"
description = "A simple tool to manage addons for Guild Wars 2."
# This is automatically adjusted - do not manually change!
version = "1.0.0"

requires-python = ">=3.11"

readme = "README.md"
dependencies = [
    "requests >=2.32.4, <3.0.0",
    "ruamel-yaml >=0.18.14, <1.0.0",
    "ttkwidgets >=0.13.0, <1.0.0",
]

authors = [
	{name = "Jared Hinze", email = "Jared.L.Hinze@gmail.com"}
]
maintainers = [
	{name = "Jared Hinze", email = "Jared.L.Hinze@gmail.com"}
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]

keywords = ["guild wars 2", "gw2"]

[dependency-groups]
build-exe = [
    "pyinstaller >=6.14.1, <7.0.0",
]
static-type-checking = [
    "mypy >=1.16.1, <2.0.0",
    "types-requests >=2.32.4.20250611, <3.0.0.0",
]
unit-testing = [
	"hypothesis>=6.135.20",
	"pytest>=8.4.1",
	"pytest-mock>=3.14.1",
]
dev = [
    "pre-commit >=4.2.0, <5.0.0",
    {include-group = "build-exe"},
    {include-group = "static-type-checking"},
    {include-group = "unit-testing"},
]

[tool.pytest.ini_options]
pythonpath = [ "src" ]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
show_error_codes = true
disable_error_code = [
	"attr-defined",
	"assignment",
	"index",
	"misc",
	"union-attr",
	"var-annotated",
]
